--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "supertest": "^6.3.4",
     "typescript": "^5.4.5"
   }
 }
